# dreamer-rust

./: .gitignore  Cargo.toml  DIAGNOSTIC_PLAN.md  FAST_CONFIG_GUIDE.md  OPTIMIZATION_PLAN.md  PHASE0_IMPLEMENTATION.md  RESEARCH_PLAN.md  RESULTS.md  run_phase0.sh  run_phase0_fast.sh  修改建议.md
examples/: show_bouncing_ball.rs
src/: config.rs  diagnostics.rs  eval_object.rs  main.rs  replay.rs  tools.rs  train.rs  train_oc.rs  video.rs
src/agent/: actor_critic.rs  discrete_actor.rs  mod.rs  oc_world_model.rs  world_model.rs
src/envs/: bouncing_ball.rs  maze.rs  mod.rs  object3d_world.rs  object_world.rs  paddle_hitting.rs  pendulum.rs  visual_navigation.rs
src/networks/: attention.rs  broadcast_decoder.rs  decoder.rs  encoder.rs  gaussian_decoder.rs  hybrid_decoder.rs  mlp.rs  mod.rs  rssm.rs  slot_attention.rs  slot_rssm.rs  spatial_broadcast_decoder.rs
